fix fonts, comments align and html lang

--- a/assets/views/works/works.scss
+++ b/assets/views/works/works.scss
@@ -248,6 +248,7 @@ $post:          #373e42;
         width: 380px;
         display: inline-block;
         margin-left: 16px;
+        vertical-align: top;
     }
 
     &__image {
